--- a/index.html
+++ b/index.html
@@ -5,8 +5,28 @@
 	<title>Document</title>
 </head>
 <body>
-	<a href="123.zip" download="123.zip">
-	<div style="width: 100px; height: 100px; background: #000;"></div>
-	</a>
+	<img src="1-1.png" alt="" class="QQQ">
+	<img src="1-2.png" alt="" class="QQQ">
+	<img src="2-1.png" alt="" class="QQQ">
+	<img src="2-2.png" alt="" class="QQQ">
+	<img src="3-1.png" alt="" class="QQQ">
+	<img src="3-2.png" alt="" class="QQQ">
+	<img src="4-1.png" alt="" class="QQQ">
+	<img src="4-1.png" alt="" class="QQQ">
+	<div class="txt"></div>
+	<div class="txt"></div>
+	<div class="txt"></div>
+	<div class="txt"></div>
+	<div class="txt"></div>
+	<div class="txt"></div>
+	<div class="txt"></div>
+	<div class="txt"></div>
 </body>
+<script>
+	var ARR = document.getElementsByClassName("QQQ");
+	var TXT = document.getElementsByClassName("txt");
+	for (var i = 0; i < ARR.length; i++) {
+		TXT[i].innerHTML = ARR[i].src;
+    }
+</script>
 </html>
