--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 	<img src="3-2.png" alt="" class="QQQ">
 	<img src="4-1.png" alt="" class="QQQ">
 	<img src="4-1.png" alt="" class="QQQ">
+	<img src="8.png" alt="" class="QQQ">
+	<img src="9.png" alt="" class="QQQ">
+	<div class="txt"></div>
+	<div class="txt"></div>
 	<div class="txt"></div>
 	<div class="txt"></div>
 	<div class="txt"></div>
