--- a/index.html
+++ b/index.html
@@ -170,9 +170,44 @@
 				</div>
 			</div>
 			<div id="page-2" class="page">
+				<div class="zhuangtailan"></div>
 				<div class="xiaochengxu">
 					<div class="page-title-z">权牛牛商城</div>
 					<img src="images/xiaochengxu-icon.png" alt="" class="xiaochengxu-icon">
+				</div>
+				<div id="shangcheng-banner">
+					<img src="images/banner.png" alt="">
+				</div>
+				<div id="shangcheng-1">
+					<div id="shangcheng-1-1"></div>
+					<div id="shangcheng-1-2">
+						<div id="shangcheng-1-2-1"></div>
+						<div id="shangcheng-1-2-2"></div>
+					</div>
+				</div>
+				<div id="shangcheng-2">
+					<div class="hei-60">新品上市</div>
+					<div class="hui-48">New products listed</div>
+				</div>
+				<div id="shangcheng-3">
+					<div class="shangcheng-3-1">
+						<div class="shangcheng-3-1-1"></div>
+						<div class="hei-48">商品主标题</div>
+						<div class="hui-36">商品副标题/商品销量</div>
+						<div class="shangcheng-3-1-2">
+							<div class="cheng-48">￥128.00</div>
+							<img src="images/jia.png" alt="" class="shangcheng-3-1-2-img">
+						</div>
+					</div>
+					<div class="shangcheng-3-1">
+						<div class="shangcheng-3-1-1"></div>
+						<div class="hei-48">商品主标题</div>
+						<div class="hui-36">商品副标题/商品销量</div>
+						<div class="shangcheng-3-1-2">
+							<div class="cheng-48">￥128.00</div>
+							<img src="images/jia.png" alt="" class="shangcheng-3-1-2-img">
+						</div>
+					</div>
 				</div>
 			</div>
 			<div id="page-3" class="page">
